# interviews

statnett/: README.md  SOLUTION.md  fetcher.py  main.py  power_logger.py  processor.py  pyproject.toml  schema.py
