[project]
name = "statnett"
version = "0.1.0"
description = "Statnett case interview"
authors = [
    {name = "Sharanan Kulam", email = "sharu95@users.noreply.github.com"},
]
dependencies = ["requests>=2.32.3", "pandas>=2.2.3", "fastapi[standard]>=0.115.12"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
